# QA

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 55fabcab3130_.py
api/: dependencies.py
api/views/: answer_view.py  question_view.py
core/: config.py  database.py
core/models/: __init__.py  answer.py  base.py  question.py
core/repositories/: answer_repository.py  question_repository.py
core/schemas/: answer_schema.py  question_schema.py
core/services/: answer_service.py  question_service.py
tests/: README.md  conftest.py  test_answer_api.py  test_answer_repository.py  test_answer_service.py  test_question_api.py  test_question_repository.py  test_question_service.py
